Retorno das rotas disponíveis automaticamente :sparkles: